--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <link rel="preload" href="./css/style.min.css" as="style" />
     <link rel="stylesheet" href="./css/style.min.css" />
 
+    <script>
+      document.documentElement.classList.add('js')
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Saira:wght@500;600&display=swap"
       rel="stylesheet"
     />
-
-    <script>
-      document.documentElement.classList.add('js')
-    </script>
   </head>
   <body>
     <div class="background">
@@ -59,7 +59,7 @@
             <h1 data-anime="400" class="font-1-xxl fadeInLeft">
               Assistência técnica especializada.
             </h1>
-            <p data-anime="600" class="font-2-l cor-4 fadeInLeft">
+            <p data-anime="600" class="font-2-l cor-2 fadeInLeft">
               Reparos de alta qualidade em celulares, tablets, notebooks e
               desktops.
             </p>
@@ -451,7 +451,7 @@
       <div class="depoimentos container">
         <header>
           <h2 class="font-1-xl cor-0">Depoimentos.</h2>
-          <p class="font-2-l cor-5">O que nossos clientes dizem sobre nós.</p>
+          <p class="font-2-l cor-4">O que nossos clientes dizem sobre nós.</p>
         </header>
 
         <div class="swiper mySwiper">
@@ -465,7 +465,7 @@
                 </p>
                 <div class="autor">
                   <img
-                    src="./img/avatares/avatar4.jpg"
+                    src="./img/avatares/home/avatar4.jpg"
                     width="32"
                     height="32"
                     alt=""
@@ -483,7 +483,7 @@
                 </p>
                 <div class="autor">
                   <img
-                    src="./img/avatares/avatar3.jpg"
+                    src="./img/avatares/home/avatar3.jpg"
                     width="32"
                     height="32"
                     alt=""
@@ -501,7 +501,7 @@
                 </p>
                 <div class="autor">
                   <img
-                    src="./img/avatares/avatar2.jpg"
+                    src="./img/avatares/home/avatar2.jpg"
                     width="32"
                     height="32"
                     alt=""
@@ -519,7 +519,7 @@
                 </p>
                 <div class="autor">
                   <img
-                    src="./img/avatares/avatar.jpg"
+                    src="./img/avatares/home/avatar.jpg"
                     width="32"
                     height="32"
                     alt=""
