--- a/servicos.html
+++ b/servicos.html
@@ -12,16 +12,16 @@
     <link rel="preload" href="./css/style.min.css" as="style" />
     <link rel="stylesheet" href="./css/style.min.css" />
 
+    <script>
+      document.documentElement.classList.add('js')
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Saira:wght@500;600&display=swap"
       rel="stylesheet"
     />
-
-    <script>
-      document.documentElement.classList.add('js')
-    </script>
   </head>
   <body>
     <header class="header-bg paginas">
@@ -363,7 +363,7 @@
       <div class="diferenciais container">
         <header class="container">
           <h2 class="font-1-xl cor-0">Por que nós?</h2>
-          <p class="font-2-l cor-3">Conheça nossos diferenciais.</p>
+          <p class="font-2-l cor-4">Conheça nossos diferenciais.</p>
         </header>
 
         <ul class="container">
@@ -457,9 +457,8 @@
             </button>
           </dt>
           <dd id="pergunta2" class="font-2-xs cor-9">
-            Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
-            pagamentos à vista também aceitarmos PIX e Boleto através do
-            PagSeguro.
+            Sim, nosso serviços realizados possuem garantia. Damos todo o
+            suporte para o cliente após o reparo de seu equipamento.
           </dd>
         </div>
         <div>
@@ -473,9 +472,10 @@
             </button>
           </dt>
           <dd id="pergunta3" class="font-2-xs cor-9">
-            Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
-            pagamentos à vista também aceitarmos PIX e Boleto através do
-            PagSeguro.
+            Realizamos orçamentos em até 2 dias úteis. Após o cliente aprovar o
+            orçamento, o tempo de reparo será informado e finalizado entre 1 a 3
+            dias úteis. Dependendo do tipo de reparo, há possibilidade de ficar
+            pronto no mesmo dia.
           </dd>
         </div>
         <div>
@@ -489,9 +489,8 @@
             </button>
           </dt>
           <dd id="pergunta4" class="font-2-xs cor-9">
-            Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
-            pagamentos à vista também aceitarmos PIX e Boleto através do
-            PagSeguro.
+            Caso haja essa possibilidade, será informado previamente para o
+            cliente, na hora da aprovação do orçamento.
           </dd>
         </div>
       </dl>
