--- a/sobre.html
+++ b/sobre.html
@@ -17,16 +17,16 @@
     <link rel="preload" href="./css/style.min.css" as="style" />
     <link rel="stylesheet" href="./css/style.min.css" />
 
+    <script>
+      document.documentElement.classList.add('js')
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Saira:wght@500;600&display=swap"
       rel="stylesheet"
     />
-
-    <script>
-      document.documentElement.classList.add('js')
-    </script>
   </head>
   <body>
     <header class="header-bg paginas">
@@ -64,23 +64,28 @@
       </h2>
 
       <div class="sobre-conteudo">
-        <div class="font-2-l cor-8 texto">
+        <div class="font-2-s cor-9 texto">
           <p>
-            A Ribeiro Tecnologia é uma loja de acessórios e assistência técnica
-            especializada em reparos de smartphones, notebooks, tablets e
-            desktops.
+            Desde 2010, a Ribeiro Tecnologia oferece serviços e soluções
+            profissionais de reparo de Celulares, Notebooks, Tablets e
+            Computadores. Oferecemos suporte para todas as necessidades de
+            reparo, substituição e proteção do seu dispositivo.
           </p>
           <p>
-            Atuando desde 2010 em São José do Rio Preto, a Ribeiro Tecnologia
-            tem como principal objetivo prestar um excelente atendimento a todos
-            seus clientes, fornecendo mão de obra especializada, honestidade,
-            qualidade e agilidade.
+            Nosso objetivo é simples: atender nossos clientes da melhor forma
+            possível, com reparos de alta qualidade e preço justo, realizados
+            por técnicos treinados e certificados.
           </p>
           <p>
-            Possui técnicos capacitados e com CREA, laboratório equipado, peças
-            de alta performance e atendimento eficiente para resolver o seu
-            problema no menor tempo possível com qualidade e preço justo. Venha
-            conhecer nosso serviço!
+            Temos como pilares em nossa empresa: Honestidade, Qualidade e
+            Agilidade. Contamos com equipamentos de última geração, especiais
+            para realizar o reparo em todas as marcas de celular, sendo eles
+            nacionais ou importados.
+          </p>
+          <p>
+            Com orçamentos gratuitos e feitos em até 2 dias úteis, na Ribeiro
+            Tecnologia você usufrui de um atendimento personalizado, com peças
+            de qualidade e preço justo.
           </p>
         </div>
         <div>
@@ -114,11 +119,12 @@
         />
       </div>
     </article>
+
     <section class="depoimentos-bg">
       <div class="depoimentos container">
         <header>
           <h2 class="font-1-xl cor-0">Depoimentos.</h2>
-          <p class="font-2-l cor-5">O que nossos clientes dizem sobre nós.</p>
+          <p class="font-2-l cor-4">O que nossos clientes dizem sobre nós.</p>
         </header>
 
         <div class="swiper mySwiper">
@@ -126,18 +132,20 @@
             <div class="depoimento swiper-slide">
               <blockquote>
                 <p class="font-2-xs cor-9">
-                  Profissionais dispostos a explicar a solução de forma
-                  objetiva; ambiente agradável e aconchegante; preço competitivo
-                  e serviço eficaz. Recomendo.
+                  Recomendo muito. Profissional super honesto e competente, fui
+                  várias vezes na loja e sempre me atendeu super bem. Se você
+                  procura atendimento de primeira e honestidade está indo no
+                  lugar certo. Recomendo de olhos fechados, quando precisar
+                  fazer algum serviço, com certeza será com ele.
                 </p>
                 <div class="autor">
                   <img
-                    src="./img/avatares/avatar4.jpg"
+                    src="./img/avatares/sobre/avatar1.jpg"
                     width="32"
                     height="32"
                     alt=""
                   />
-                  <span class="font-1-xs cor-7"> Henrique de Oliveira </span>
+                  <span class="font-1-xs cor-7"> João Ribeiro </span>
                 </div>
               </blockquote>
             </div>
@@ -145,17 +153,18 @@
             <div class="depoimento swiper-slide">
               <blockquote>
                 <p class="font-2-xs cor-9">
-                  Ótimos profissionais! atendimento perfeito e super eficiente,
-                  recomendo!
+                  Pessoal totalmente qualificado! Levei meu notebook, que já
+                  estava condenado por outros técnicos, ficou novo. Por um preço
+                  justo! Agradeço aos profissionais pelo serviço prestado.
                 </p>
                 <div class="autor">
                   <img
-                    src="./img/avatares/avatar3.jpg"
+                    src="./img/avatares/sobre/avatar2.jpg"
                     width="32"
                     height="32"
                     alt=""
                   />
-                  <span class="font-1-xs cor-7"> Nathalia Ribeiro </span>
+                  <span class="font-1-xs cor-7"> Alessandro Santos </span>
                 </div>
               </blockquote>
             </div>
@@ -163,17 +172,18 @@
             <div class="depoimento swiper-slide">
               <blockquote>
                 <p class="font-2-xs cor-9">
-                  Ótimo serviço e profissionais cuidadosos e bem preparados.
-                  Recomendo!
+                  Loja extremamente confiável, ótimo atendimento e serviço
+                  prestado com qualidade e excelência, quem procura por preço
+                  justo, este é o lugar. Super recomendo!!!
                 </p>
                 <div class="autor">
                   <img
-                    src="./img/avatares/avatar2.jpg"
+                    src="./img/avatares/sobre/avatar3.jpg"
                     width="32"
                     height="32"
                     alt=""
                   />
-                  <span class="font-1-xs cor-7"> Jaqueline Romanholo </span>
+                  <span class="font-1-xs cor-7"> Adriele Pereira </span>
                 </div>
               </blockquote>
             </div>
@@ -181,17 +191,17 @@
             <div class="depoimento swiper-slide">
               <blockquote>
                 <p class="font-2-xs cor-9">
-                  Sou cliente da Ribeiro há 3 anos, sempre me atendem muito bem
-                  e resolvem meus problemas.
+                  Show. Top, resolveram o problema do meu celular em questão de
+                  minutos, Grande profissionalismo. Com certeza super indico.
                 </p>
                 <div class="autor">
                   <img
-                    src="./img/avatares/avatar.jpg"
+                    src="./img/avatares/sobre/avatar4.jpg"
                     width="32"
                     height="32"
                     alt=""
                   />
-                  <span class="font-1-xs cor-7"> Lucas Siviero </span>
+                  <span class="font-1-xs cor-7"> André Sobral </span>
                 </div>
               </blockquote>
             </div>
